# basic-techniques

./: .gitignore  CMakeLists.txt  README.md
assignment01/: assignment.cc  assignment.hh  main.cc
assignment02/: assignment.cc  assignment.hh  main.cc  main.hh
assignment04/: MEMBERS.txt  assignment.cc  assignment.hh  main.cc  main.hh  programming_evaluation_comments.txt  sphere.cc  sphere.hh
assignment05/: MEMBERS.txt  assignment.cc  assignment.hh  main.cc  main.hh  programming_evaluation_comments.txt
common/: common.cc  common.hh  constants.hh
